--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h2 {
   font-family: var(--fuente-principal);
 }
 .subtitles-box {
-  padding: 2rem 0;
+  padding: 6rem 0;
 }
 .subtitles {
   margin: 0 auto;
@@ -97,12 +97,16 @@ h2 {
   overflow-x: hidden;
   overflow-y: hidden;
   height: 100vh;
-  background-size: cover;
 }
 .container-video video {
-  width: 100%;
   vertical-align: middle;
-  filter: brightness(0.4);
+  filter: brightness(0.8);
+  min-height: 100%;
+}
+@media (min-width: 768px) {
+  .container-video video {
+    min-width: 100%;
+  }
 }
 
 .about-me {
@@ -113,7 +117,7 @@ h2 {
 .about {
   position: absolute;
   top: 0;
-  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 }
@@ -170,6 +174,9 @@ h2 {
   border-radius: 5px;
   transition: all 0.3s ease;
 }
+.myself a:hover {
+  background-color: rgba(66, 75, 84, 0.5);
+}
 .myself img {
   border-radius: 20px;
   transition: all 0.5s ease-in-out;
@@ -191,6 +198,10 @@ h2 {
   color: var(--cosmic-latte);
 }
 /** SKILLS **/
+.skills {
+  max-width: 90rem;
+  margin: 0 auto;
+}
 .techs {
   display: flex;
   justify-content: space-between;
@@ -199,7 +210,7 @@ h2 {
 }
 .techs-2 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
 }
@@ -207,24 +218,23 @@ h2 {
 .techs-2 li {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
   font-size: 2.6rem;
   font-family: var(--fuente-secundaria);
 }
-.techs li img,
-.techs-2 li img {
-  width: 20rem;
-  border-radius: 25rem;
-  max-width: 100%;
-  transition: all 0.5s ease-in-out;
+.iconify {
+  color: var(--charcoal);
+  font-size: 8rem;
+  transition: color 0.5s ease-in-out;
 }
-.techs li img:hover,
-.techs-2 li img:hover {
-  transform: scale(1.05) rotate(-3deg);
+.iconify:hover {
+  color: #186363;
 }
+
 .techs li p,
 .techs-2 li p {
   color: var(--cosmic-latte);
+  font-size: 1.8rem;
 }
 .edit-img {
   width: 18rem !important;
