--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ html {
 img {
   max-width: 100%;
 }
+p,
+a {
+  font-family: var(--fuente-secundaria);
+}
 main {
   background: rgba(65, 180, 180, 1);
   background: -moz-linear-gradient(
@@ -60,6 +64,9 @@ main {
   );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#41b4b4', endColorstr='#41b4b4', GradientType=1 );
 }
+footer {
+  background-color: var(--charcoal);
+}
 .container {
   width: 95%;
   max-width: 120rem;
@@ -79,7 +86,7 @@ h2 {
   font-family: var(--fuente-principal);
 }
 .subtitles-box {
-  padding: 6rem 0;
+  padding: 12rem 0 8rem 0;
 }
 .subtitles {
   margin: 0 auto;
@@ -90,6 +97,7 @@ h2 {
 .subtitles h2 {
   margin: 0 auto;
   border-radius: 5px;
+  text-shadow: 0px 3px 6px rgba(150, 150, 150, 1);
 }
 /** HEADER **/
 .container-video {
@@ -100,7 +108,7 @@ h2 {
 }
 .container-video video {
   vertical-align: middle;
-  filter: brightness(0.8);
+  filter: brightness(0.5);
   min-height: 100%;
 }
 @media (min-width: 768px) {
@@ -132,9 +140,14 @@ h2 {
   justify-content: space-between;
 }
 .about-me nav a {
+  padding: 1rem;
   text-decoration: none;
-  font-size: 2.2rem;
+  font-size: 2.4rem;
   color: var(--verdigris);
+  transition: all 0.3s ease-in-out;
+}
+.about-me nav a:hover {
+  color: var(--cosmic-latte);
 }
 .about-me nav i {
   color: var(--etom-blue);
@@ -175,7 +188,8 @@ h2 {
   transition: all 0.3s ease;
 }
 .myself a:hover {
-  background-color: rgba(66, 75, 84, 0.5);
+  background-color: rgba(66, 75, 84, 0.6);
+  border: 2px solid var(--verdigris);
 }
 .myself img {
   border-radius: 20px;
@@ -185,16 +199,45 @@ h2 {
   transform: scale(1.1);
 }
 
-.bar {
-  background-color: var(--verdigris);
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 6rem;
+.navigation-box {
+  background-color: var(--charcoal);
 }
-.home {
+.navigation {
+  width: 100rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1.5rem;
+}
+.navigation a {
+  padding: 1rem;
   text-decoration: none;
   font-size: 2.4rem;
+  color: var(--cosmic-latte);
+  transition: color 0.3s ease-in-out;
+}
+.navigation a:hover {
+  color: var(--verdigris);
+}
+.navigation a i {
+  font-size: 4rem;
+}
+.home {
+  flex-basis: 60%;
+}
+.principal-nav {
+  flex-basis: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+.principal-nav a:last-child {
+  border: 2px solid var(--verdigris);
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+}
+.principal-nav a:last-child:hover {
+  background-color: rgba(65, 180, 180, 0.5);
   color: var(--cosmic-latte);
 }
 /** SKILLS **/
@@ -224,8 +267,8 @@ h2 {
 }
 .iconify {
   color: var(--charcoal);
-  font-size: 8rem;
-  transition: color 0.5s ease-in-out;
+  font-size: 10rem;
+  transition: color 0.3s ease-in-out;
 }
 .iconify:hover {
   color: #186363;
@@ -246,21 +289,86 @@ h2 {
   gap: 2rem;
   padding-bottom: 4rem;
 }
+.project {
+  position: relative;
+}
 .project img {
   border-radius: 10px;
 }
+.project-link {
+  position: absolute;
+  bottom: 80px;
+  left: 0;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transition: all 0.5s ease-in;
+  background-color: rgba(66, 75, 84, 0.8);
+  opacity: 0;
+}
+.project-link a {
+  font-size: 2.6rem;
+  padding: 10px 15px;
+  margin: 0;
+  text-decoration: none;
+  text-align: center;
+  color: var(--verdigris);
+  transition: all 0.3s ease-in;
+}
+.project-link a:hover {
+  color: var(--cosmic-latte);
+}
+.project:hover .project-link {
+  bottom: 0;
+  opacity: 1;
+}
 /** FOOTER **/
 .social {
-  background-color: var(--charcoal);
-  padding: 2rem 0;
+  width: 80rem;
+  margin: 0 auto;
   text-align: center;
   display: flex;
   justify-content: space-between;
 }
+
 .social a {
+  padding: 1.5rem 0;
   text-decoration: none;
-  color: white;
+  color: var(--cosmic-latte);
   font-size: 2.2rem;
-  margin: 0 auto;
-  width: 1200px;
+  transition: color 0.3s ease-in-out;
+}
+.social a:hover {
+  color: var(--verdigris);
+}
+.copy {
+  color: var(--cosmic-latte);
+  text-align: center;
+  font-size: 1.6rem;
+  padding: 1rem 0;
+  background-color: #343a40;
+  font-family: var(--fuente-secundaria);
+}
+.fixed .navigation-box {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000000;
+  -webkit-box-shadow: 0px 5px 12px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 5px 12px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 5px 12px -3px rgba(0, 0, 0, 0.75);
+}
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--charcoal);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--verdigris);
+  border-radius: 10px;
 }
