--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,7 @@ main {
   );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#41b4b4', endColorstr='#41b4b4', GradientType=1 );
 }
-footer {
-  background-color: var(--charcoal);
-}
+
 .container {
   width: 95%;
   max-width: 120rem;
@@ -86,7 +84,7 @@ h2 {
   font-family: var(--fuente-principal);
 }
 .subtitles-box {
-  padding: 12rem 0 8rem 0;
+  padding: 8.5rem 0 6rem 0;
 }
 .subtitles {
   margin: 0 auto;
@@ -111,7 +109,7 @@ h2 {
   filter: brightness(0.5);
   min-height: 100%;
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (min-width: 992px) {
   .container-video video {
     min-width: 100%;
   }
@@ -134,6 +132,11 @@ h2 {
   width: 400px;
   text-align: center;
 }
+@media (min-width: 768px) and (min-width: 992px) {
+  .header-nav {
+    width: 500px;
+  }
+}
 .header-nav nav {
   padding-top: 6rem;
   display: flex;
@@ -141,10 +144,15 @@ h2 {
 }
 .about-me nav a {
   padding: 1rem;
+  font-size: 2rem;
   text-decoration: none;
-  font-size: 2.4rem;
   color: var(--verdigris);
   transition: all 0.3s ease-in-out;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .about-me nav a {
+    font-size: 2.6rem;
+  }
 }
 .about-me nav a:hover {
   color: var(--cosmic-latte);
@@ -154,26 +162,58 @@ h2 {
 }
 .hello {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  padding: 10rem;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .hello {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10rem;
+  }
 }
 .presentation {
-  width: 600px;
+  width: 95%;
+  margin-top: 2rem;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .presentation {
+    width: 600px;
+  }
 }
 .presentation h1 {
-  font-size: 5rem;
-  text-align: start;
+  font-size: 3.2rem;
+  text-align: center;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .presentation h1 {
+    font-size: 5rem;
+    text-align: start;
+  }
 }
 .presentation p {
   font-size: 2rem;
+  text-align: center;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .presentation p {
+    font-size: 2.4rem;
+    text-align: start;
+  }
 }
 .myself {
-  width: 25rem;
-  margin-left: 10rem;
+  width: 20rem;
+  margin-top: 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .myself {
+    width: 29rem;
+    margin-top: 0;
+  }
 }
 .myself a {
   font-family: var(--fuente-principal);
@@ -181,15 +221,20 @@ h2 {
   font-size: 2.4rem;
   font-weight: 600;
   color: var(--cosmic-latte);
-  border: 2px solid var(--cosmic-latte);
+  border: 3px solid var(--verdigris);
   margin-top: 2rem;
   padding: 1rem;
   border-radius: 5px;
   transition: all 0.3s ease;
 }
+@media (min-width: 768px) and (min-width: 992px) {
+  .myself a {
+    font-size: 3rem;
+  }
+}
 .myself a:hover {
-  background-color: rgba(66, 75, 84, 0.6);
-  border: 2px solid var(--verdigris);
+  background-color: rgba(66, 75, 84, 0.7);
+  border: 3px solid var(--verdigris);
 }
 .myself img {
   border-radius: 20px;
@@ -198,24 +243,34 @@ h2 {
 .myself img:hover {
   transform: scale(1.1);
 }
-
+/* NAVIGATION BAR */
 .navigation-box {
   background-color: var(--charcoal);
+  width: 100%;
 }
 .navigation {
-  width: 100rem;
   margin: 0 auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding: 1.5rem;
 }
+@media (min-width: 768px) and (min-width: 992px) {
+  .navigation {
+    margin: 0 10rem;
+  }
+}
 .navigation a {
-  padding: 1rem;
+  padding: 1rem 2rem;
   text-decoration: none;
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   color: var(--cosmic-latte);
   transition: color 0.3s ease-in-out;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .navigation a {
+    font-size: 2.8rem;
+  }
 }
 .navigation a:hover {
   color: var(--verdigris);
@@ -224,12 +279,21 @@ h2 {
   font-size: 4rem;
 }
 .home {
-  flex-basis: 60%;
+  flex-basis: 20%;
 }
 .principal-nav {
-  flex-basis: 40%;
+  flex-basis: 80%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .home {
+    flex-basis: 100%;
+  }
+  .principal-nav {
+    flex-basis: 100%;
+  }
 }
 .principal-nav a:last-child {
   border: 2px solid var(--verdigris);
@@ -277,7 +341,7 @@ h2 {
 .techs li p,
 .techs-2 li p {
   color: var(--cosmic-latte);
-  font-size: 1.8rem;
+  font-size: 2.4rem;
 }
 .edit-img {
   width: 18rem !important;
@@ -285,9 +349,14 @@ h2 {
 /* PROJECTS */
 .work {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap: 2rem;
   padding-bottom: 4rem;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .work {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .project {
   position: relative;
@@ -325,12 +394,20 @@ h2 {
   opacity: 1;
 }
 /** FOOTER **/
+footer {
+  background-color: var(--charcoal);
+  width: 100%;
+}
 .social {
-  width: 80rem;
-  margin: 0 auto;
+  margin: 0 5rem;
   text-align: center;
   display: flex;
   justify-content: space-between;
+}
+@media (min-width: 768px) and (min-width: 992px) {
+  .social {
+    margin: 0 20rem;
+  }
 }
 
 .social a {
@@ -361,7 +438,7 @@ h2 {
   -moz-box-shadow: 0px 5px 12px -3px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 5px 12px -3px rgba(0, 0, 0, 0.75);
 }
-/* Scrollbar */
+/* Scrollbar 
 ::-webkit-scrollbar {
   width: 5px;
 }
