--- a/css/style-es.css
+++ b/css/style-es.css
@@ -278,37 +278,38 @@ h2 {
   }
 }
 .navigation a {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   text-decoration: none;
-  font-size: 2.2rem;
+  font-size: 2rem;
   color: var(--cosmic-latte);
   transition: color 0.3s ease-in-out;
 }
 @media (min-width: 768px) and (min-width: 992px) {
   .navigation a {
     font-size: 2.8rem;
+    padding: 1rem 2rem;
   }
 }
 @media (max-width: 480px) {
   .navigation a {
-    padding: 0.5rem 1rem;
-    font-size: 2rem;
+    padding: 0 0.5rem;
+    font-size: 1.8rem;
   }
 }
 .navigation a:hover {
   color: var(--verdigris);
 }
 .navigation a i {
-  font-size: 3rem;
+  font-size: 2.6rem;
 }
 @media (min-width: 768px) and (min-width: 992px) {
   .navigation a i {
-    font-size: 3.6rem;
+    font-size: 3.2rem;
   }
 }
 @media (max-width: 480px) {
   .navigation a i {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
 .home {
@@ -492,6 +493,7 @@ footer {
   background-color: var(--verdigris);
   border-radius: 10px;
 }
+
 .traduction {
   font-size: 2rem;
   text-align: end;
