--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,9 @@ h2 {
 @media (min-width: 768px) and (min-width: 992px) {
   .hello {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 10rem;
+    padding: 6rem;
   }
 }
 .presentation {
@@ -202,11 +202,18 @@ h2 {
 .presentation h1 {
   font-size: 3.2rem;
   text-align: center;
+  margin: 0;
+}
+.presentation h1 br {
+  display: none;
 }
 @media (min-width: 768px) and (min-width: 992px) {
   .presentation h1 {
     font-size: 5rem;
-    text-align: start;
+    text-align: justify;
+  }
+  .presentation h1 br {
+    display: block;
   }
 }
 .presentation p {
@@ -407,9 +414,8 @@ h2 {
 }
 .project-link {
   position: absolute;
-  bottom: 80px;
+  bottom: 0;
   left: 0;
-  display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
@@ -418,6 +424,13 @@ h2 {
   background-color: rgba(66, 75, 84, 0.8);
   opacity: 0;
   height: 100%;
+  display: none;
+}
+@media (min-width: 768px) {
+  .project-link {
+    display: flex;
+    bottom: 80px;
+  }
 }
 .project-link a {
   font-size: 2.6rem;
@@ -431,9 +444,11 @@ h2 {
 .project-link a:hover {
   color: var(--cosmic-latte);
 }
-.project:hover .project-link {
-  bottom: 0;
-  opacity: 1;
+@media (min-width: 768px) {
+  .project:hover .project-link {
+    bottom: 0;
+    opacity: 1;
+  }
 }
 /** FOOTER **/
 footer {
@@ -504,4 +519,8 @@ footer {
 }
 .traduction a i {
   color: var(--verdigris);
+}
+.display-flex {
+  display: flex;
+  opacity: 1;
 }
