--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ h2 {
 @media (min-width: 768px) and (min-width: 992px) {
   .presentation p {
     font-size: 2.4rem;
-    text-align: start;
+    text-align: justify;
   }
 }
 .myself {
